@@ -20,8 +20,9 @@ import org.bukkit.plugin.java.JavaPlugin;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -36,23 +37,23 @@ public class UpdateChecker implements Listener {
     private final String currentVersion;
     private String latestVersion = "";
     private String downloadUrl = "";
-    private String directLink = "";
     private boolean serverVersionSupported = true;
     private JsonArray latestSupportedVersions = null;
 
-    private static final String CONSOLE_RESET = "\u001B[0m";
-    private static final String CONSOLE_BRIGHT_GREEN = "\u001B[92m";
-    private static final String CONSOLE_YELLOW = "\u001B[33m";
-    private static final String CONSOLE_INDIGO = "\u001B[38;5;93m";
-    private static final String CONSOLE_LAVENDER = "\u001B[38;5;183m";
-    private static final String CONSOLE_BRIGHT_PURPLE = "\u001B[95m";
-    private static final String CONSOLE_RED = "\u001B[91m";
+    // ANSI codes for console output
+    private static final String RESET  = "\u001B[0m";
+    private static final String BOLD   = "\u001B[1m";
+    private static final String DIM    = "\u001B[2m";
+    private static final String GREEN  = "\u001B[92m";
+    private static final String YELLOW = "\u001B[33m";
+    private static final String CYAN   = "\u001B[96m";
+    private static final String RED    = "\u001B[91m";
 
     private final Map<UUID, LocalDate> notifiedPlayers = new HashMap<>();
 
     public UpdateChecker(JavaPlugin plugin) {
         this.plugin = plugin;
-        this.currentVersion = plugin.getDescription().getVersion();
+        this.currentVersion = plugin.getPluginMeta().getVersion();
         plugin.getServer().getPluginManager().registerEvents(this, plugin);
 
         checkForUpdates().thenAccept(hasUpdate -> {
@@ -68,92 +69,56 @@ public class UpdateChecker implements Listener {
     }
 
     private void displayConsoleUpdateMessage() {
-        String modrinthLink = "https://modrinth.com/plugin/" + projectId + "/version/" + latestVersion;
-        String frameColor = CONSOLE_INDIGO;
-
-        plugin.getLogger().info(frameColor +
-                "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━" + CONSOLE_RESET);
-        plugin.getLogger().info(frameColor + CONSOLE_BRIGHT_GREEN +
-                "         🔮 ꜱᴍᴀʀᴛꜱᴘᴀᴡɴᴇʀ ᴜᴘᴅᴀᴛᴇ ᴀᴠᴀɪʟᴀʙʟᴇ 🔮" + CONSOLE_RESET);
-        plugin.getLogger().info(frameColor +
-                "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━" + CONSOLE_RESET);
-        plugin.getLogger().info("");
-        plugin.getLogger().info(frameColor +
-                CONSOLE_RESET + "📦 ᴄᴜʀʀᴇɴᴛ ᴠᴇʀꜱɪᴏɴ: " + CONSOLE_YELLOW  + formatConsoleText(currentVersion, 31) + CONSOLE_RESET);
-        plugin.getLogger().info(frameColor +
-                CONSOLE_RESET + "✅ ʟᴀᴛᴇꜱᴛ ᴠᴇʀꜱɪᴏɴ: " + CONSOLE_BRIGHT_GREEN + formatConsoleText(latestVersion, 32) + CONSOLE_RESET);
-        plugin.getLogger().info("");
-        plugin.getLogger().info(frameColor +
-                CONSOLE_RESET + "📥 ᴅᴏᴡɴʟᴏᴀᴅ ᴛʜᴇ ʟᴀᴛᴇꜱᴛ ᴠᴇʀꜱɪᴏɴ ᴀᴛ:" + CONSOLE_RESET);
-        plugin.getLogger().info(frameColor + " " +
-                CONSOLE_LAVENDER + formatConsoleText(modrinthLink, 51) + CONSOLE_RESET);
-        plugin.getLogger().info("");
-        plugin.getLogger().info(frameColor +
-                "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━" + CONSOLE_RESET);
+        String line = DIM + "-----------------------------------------------------" + RESET;
+        plugin.getLogger().info(line);
+        plugin.getLogger().info(BOLD + "  SmartSpawner - Update Available" + RESET);
+        plugin.getLogger().info(line);
+        plugin.getLogger().info("  Current version  :  " + YELLOW + currentVersion + RESET);
+        plugin.getLogger().info("  Latest version   :  " + GREEN  + latestVersion  + RESET);
+        plugin.getLogger().info("  Download         :  " + CYAN
+                + "https://modrinth.com/plugin/" + projectId + "/version/" + latestVersion + RESET);
+        plugin.getLogger().info(line);
     }
 
     private void displayUnsupportedVersionMessage() {
-        String frameColor = CONSOLE_RED;
         String serverVersion = Bukkit.getVersion();
-
-        plugin.getLogger().warning(frameColor +
-                "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━" + CONSOLE_RESET);
-        plugin.getLogger().warning(frameColor + CONSOLE_YELLOW +
-                "      ⚠️  ꜱᴇʀᴠᴇʀ ᴠᴇʀꜱɪᴏɴ ɴᴏ ʟᴏɴɢᴇʀ ꜱᴜᴘᴘᴏʀᴛᴇᴅ  ⚠️" + CONSOLE_RESET);
-        plugin.getLogger().warning(frameColor +
-                "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━" + CONSOLE_RESET);
+        String line = DIM + "-----------------------------------------------------" + RESET;
+        plugin.getLogger().warning(line);
+        plugin.getLogger().warning(BOLD + RED + "  SmartSpawner - Server Version Not Supported" + RESET);
+        plugin.getLogger().warning(line);
+        plugin.getLogger().warning("  Server version   :  " + YELLOW + serverVersion + RESET);
+        plugin.getLogger().warning("  Latest plugin    :  " + GREEN  + latestVersion  + RESET);
+        plugin.getLogger().warning("  Supported MC     :  " + CYAN   + getSupportedVersionsString() + RESET);
         plugin.getLogger().warning("");
-        plugin.getLogger().warning(frameColor +
-                CONSOLE_RESET + "🖥️ ʏᴏᴜʀ ꜱᴇʀᴠᴇʀ ᴠᴇʀꜱɪᴏɴ: " + CONSOLE_YELLOW + serverVersion + CONSOLE_RESET);
-        plugin.getLogger().warning(frameColor +
-                CONSOLE_RESET + "📦 ʟᴀᴛᴇꜱᴛ ᴘʟᴜɢɪɴ ᴠᴇʀꜱɪᴏɴ: " + CONSOLE_BRIGHT_GREEN + latestVersion + CONSOLE_RESET);
-        plugin.getLogger().warning(frameColor +
-                CONSOLE_RESET + "🎯 ꜱᴜᴘᴘᴏʀᴛᴇᴅ ꜱᴇʀᴠᴇʀ ᴠᴇʀꜱɪᴏɴꜱ: " + CONSOLE_LAVENDER + getSupportedVersionsString() + CONSOLE_RESET);
-        plugin.getLogger().warning("");
-        plugin.getLogger().warning(frameColor +
-                CONSOLE_RESET + "⚠️  ᴛʜɪꜱ ꜱᴇʀᴠᴇʀ ᴠᴇʀꜱɪᴏɴ ɪꜱ ɴᴏ ʟᴏɴɢᴇʀ ꜱᴜᴘᴘᴏʀᴛᴇᴅ" + CONSOLE_RESET);
-        plugin.getLogger().warning(frameColor +
-                CONSOLE_RESET + "📋 ᴜᴘᴅᴀᴛᴇ ɴᴏᴛɪꜰɪᴄᴀᴛɪᴏɴꜱ ᴅɪꜱᴀʙʟᴇᴅ" + CONSOLE_RESET);
-        plugin.getLogger().warning("");
-        plugin.getLogger().warning(frameColor +
-                "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━" + CONSOLE_RESET);
+        plugin.getLogger().warning("  This server version is no longer supported.");
+        plugin.getLogger().warning("  Update notifications have been disabled.");
+        plugin.getLogger().warning(line);
     }
 
     private String getSupportedVersionsString() {
         if (latestSupportedVersions == null || latestSupportedVersions.isEmpty()) {
             return "N/A";
         }
-
-        return latestSupportedVersions.asList().stream()
-                .map(JsonElement::getAsString)
-                .collect(Collectors.joining(", "));
-    }
-
-    private String formatConsoleText(String text, int maxLength) {
-        if (text.length() > maxLength) {
-            return text.substring(0, maxLength - 3) + "...";
+        List<String> versions = new ArrayList<>();
+        for (JsonElement element : latestSupportedVersions) {
+            versions.add(element.getAsString());
         }
-        return text + " ".repeat(maxLength - text.length());
+        return String.join(", ", versions);
     }
 
     private boolean isServerVersionSupported(JsonObject latestVersionObj) {
         try {
             String serverVersion = Bukkit.getVersion();
-
             JsonArray gameVersions = latestVersionObj.getAsJsonArray("game_versions");
             if (gameVersions == null || gameVersions.isEmpty()) {
                 return true;
             }
-
             String cleanServerVersion = extractMinecraftVersion(serverVersion);
-
             for (JsonElement versionElement : gameVersions) {
-                String supportedVersion = versionElement.getAsString();
-                if (isVersionCompatible(cleanServerVersion, supportedVersion)) {
+                if (isVersionCompatible(cleanServerVersion, versionElement.getAsString())) {
                     return true;
                 }
             }
-
             return false;
         } catch (Exception e) {
             plugin.getLogger().warning("Error checking server version compatibility: " + e.getMessage());
@@ -169,16 +134,13 @@ public class UpdateChecker implements Listener {
             }
             return mcPart.trim();
         }
-
         if (serverVersion.matches(".*\\d+\\.\\d+(\\.\\d+)?.*")) {
-            String[] parts = serverVersion.split("\\s+");
-            for (String part : parts) {
+            for (String part : serverVersion.split("\\s+")) {
                 if (part.matches("\\d+\\.\\d+(\\.\\d+)?")) {
                     return part;
                 }
             }
         }
-
         return serverVersion;
     }
 
@@ -187,19 +149,12 @@ public class UpdateChecker implements Listener {
             if (serverVersion.equals(supportedVersion)) {
                 return true;
             }
-
-            String[] serverParts = serverVersion.split("\\.");
+            String[] serverParts    = serverVersion.split("\\.");
             String[] supportedParts = supportedVersion.split("\\.");
-
             if (serverParts.length >= 2 && supportedParts.length >= 2) {
-                int serverMajor = Integer.parseInt(serverParts[0]);
-                int serverMinor = Integer.parseInt(serverParts[1]);
-                int supportedMajor = Integer.parseInt(supportedParts[0]);
-                int supportedMinor = Integer.parseInt(supportedParts[1]);
-
-                return serverMajor == supportedMajor && serverMinor == supportedMinor;
+                return Integer.parseInt(serverParts[0]) == Integer.parseInt(supportedParts[0])
+                        && Integer.parseInt(serverParts[1]) == Integer.parseInt(supportedParts[1]);
             }
-
             return false;
         } catch (NumberFormatException e) {
             return serverVersion.equals(supportedVersion);
@@ -209,19 +164,22 @@ public class UpdateChecker implements Listener {
     public CompletableFuture<Boolean> checkForUpdates() {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                URL url = new URL("https://api.modrinth.com/v2/project/" + projectId + "/version");
-                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+                HttpURLConnection connection = (HttpURLConnection) URI
+                        .create("https://api.modrinth.com/v2/project/" + projectId + "/version")
+                        .toURL()
+                        .openConnection();
                 connection.setRequestMethod("GET");
                 connection.setRequestProperty("User-Agent", "SmartSpawner-UpdateChecker/1.0");
 
                 if (connection.getResponseCode() != 200) {
-                    plugin.getLogger().warning("Failed to check for updates. HTTP Error: " + connection.getResponseCode());
+                    plugin.getLogger().warning("Update check failed with HTTP " + connection.getResponseCode());
                     return false;
                 }
 
-                BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                String response = reader.lines().collect(Collectors.joining("\n"));
-                reader.close();
+                String response;
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                    response = reader.lines().collect(Collectors.joining("\n"));
+                }
 
                 JsonArray versions = JsonParser.parseString(response).getAsJsonArray();
                 if (versions.isEmpty()) {
@@ -231,16 +189,16 @@ public class UpdateChecker implements Listener {
                 JsonObject latestVersionObj = null;
                 for (JsonElement element : versions) {
                     JsonObject version = element.getAsJsonObject();
-                    String versionType = version.get("version_type").getAsString();
-                    if (versionType.equals("release")) {
-                        if (latestVersionObj == null) {
+                    if (!"release".equals(version.get("version_type").getAsString())) {
+                        continue;
+                    }
+                    if (latestVersionObj == null) {
+                        latestVersionObj = version;
+                    } else {
+                        String currentDate = latestVersionObj.get("date_published").getAsString();
+                        String newDate     = version.get("date_published").getAsString();
+                        if (newDate.compareTo(currentDate) > 0) {
                             latestVersionObj = version;
-                        } else {
-                            String currentDate = latestVersionObj.get("date_published").getAsString();
-                            String newDate = version.get("date_published").getAsString();
-                            if (newDate.compareTo(currentDate) > 0) {
-                                latestVersionObj = version;
-                            }
                         }
                     }
                 }
@@ -250,28 +208,16 @@ public class UpdateChecker implements Listener {
                 }
 
                 latestVersion = latestVersionObj.get("version_number").getAsString();
-                String versionId = latestVersionObj.get("id").getAsString();
+                downloadUrl   = "https://modrinth.com/plugin/" + projectId + "/version/" + latestVersion;
 
-                downloadUrl = "https://modrinth.com/plugin/" + projectId + "/version/" + latestVersion;
-
-                JsonArray files = latestVersionObj.getAsJsonArray("files");
-                if (!files.isEmpty()) {
-                    JsonObject primaryFile = files.get(0).getAsJsonObject();
-                    directLink = primaryFile.get("url").getAsString();
-                }
-
-                serverVersionSupported = isServerVersionSupported(latestVersionObj);
+                serverVersionSupported  = isServerVersionSupported(latestVersionObj);
                 latestSupportedVersions = latestVersionObj.getAsJsonArray("game_versions");
 
-                Version latest = new Version(latestVersion);
-                Version current = new Version(currentVersion);
-
-                updateAvailable = latest.compareTo(current) > 0;
+                updateAvailable = new Version(latestVersion).compareTo(new Version(currentVersion)) > 0;
                 return updateAvailable;
 
             } catch (Exception e) {
                 plugin.getLogger().warning("Error checking for updates: " + e.getMessage());
-                e.printStackTrace();
                 return false;
             }
         });
@@ -282,76 +228,70 @@ public class UpdateChecker implements Listener {
             return;
         }
 
-        TextColor primaryPurple = TextColor.fromHexString("#ab7afd");
-        TextColor deepPurple = TextColor.fromHexString("#7b68ee");
-        TextColor indigo = TextColor.fromHexString("#5B2C6F");
-        TextColor brightGreen = TextColor.fromHexString("#37eb9a");
+        TextColor purple = TextColor.fromHexString("#9b72cf");
+        TextColor green  = TextColor.fromHexString("#57d98e");
         TextColor yellow = TextColor.fromHexString("#f0c857");
-        TextColor white = TextColor.fromHexString("#e6e6fa");
+        TextColor white  = TextColor.fromHexString("#e6e6e6");
+        TextColor gray   = TextColor.fromHexString("#555577");
 
-        Component borderTop = Component.text("━━━━━━━━ ꜱᴍᴀʀᴛꜱᴘᴀᴡɴᴇʀ ᴜᴘᴅᴀᴛᴇ ━━━━━━━━").color(deepPurple);
-        Component borderBottom = Component.text("━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━").color(deepPurple);
+        Component line = Component.text("----------------------------------------").color(gray);
 
-        Component updateMsg = Component.text("➤ ɴᴇᴡ ᴜᴘᴅᴀᴛᴇ ᴀᴠᴀɪʟᴀʙʟᴇ!").color(brightGreen);
+        Component header = Component.text("SmartSpawner").color(purple)
+                .append(Component.text(" - Update Available").color(white));
 
-        Component versionsComponent = Component.text("✦ ᴄᴜʀʀᴇɴᴛ: ")
-                .color(white)
+        Component versions = Component.text("  Current: ").color(white)
                 .append(Component.text(currentVersion).color(yellow))
-                .append(Component.text("  ✦ ʟᴀᴛᴇꜱᴛ: ").color(white))
-                .append(Component.text(latestVersion).color(brightGreen));
+                .append(Component.text("  ->  Latest: ").color(white))
+                .append(Component.text(latestVersion).color(green));
 
-        Component downloadButton = Component.text("▶ [ᴄʟɪᴄᴋ ᴛᴏ ᴅᴏᴡɴʟᴏᴀᴅ ʟᴀᴛᴇꜱᴛ ᴠᴇʀꜱɪᴏɴ]")
-                .color(primaryPurple)
+        Component download = Component.text("  [ Click here to download v" + latestVersion + " ]")
+                .color(purple)
                 .clickEvent(ClickEvent.openUrl(downloadUrl))
                 .hoverEvent(HoverEvent.showText(
-                        Component.text("ᴅᴏᴡɴʟᴏᴀᴅ ᴠᴇʀꜱɪᴏɴ ")
-                                .color(white)
-                                .append(Component.text(latestVersion).color(brightGreen))
-                ));
+                        Component.text("Open download page on Modrinth").color(white)));
 
-        player.sendMessage(" ");
-        player.sendMessage(borderTop);
-        player.sendMessage(" ");
-        player.sendMessage(updateMsg);
-        player.sendMessage(versionsComponent);
-        player.sendMessage(downloadButton);
-        player.sendMessage(" ");
-        player.sendMessage(borderBottom);
+        player.sendMessage(Component.empty());
+        player.sendMessage(line);
+        player.sendMessage(header);
+        player.sendMessage(versions);
+        player.sendMessage(download);
+        player.sendMessage(line);
+        player.sendMessage(Component.empty());
 
-        player.playSound(player.getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 0.8f, 1.2f);
+        player.playSound(player.getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 0.6f, 1.2f);
     }
 
     @EventHandler
     public void onPlayerJoin(PlayerJoinEvent event) {
         Player player = event.getPlayer();
-
-        if (player.isOp()) {
-            UUID playerId = player.getUniqueId();
-            LocalDate today = LocalDate.now();
-
-            notifiedPlayers.entrySet().removeIf(entry -> entry.getValue().isBefore(today));
-
-            if (notifiedPlayers.containsKey(playerId) && notifiedPlayers.get(playerId).isEqual(today)) {
-                return;
-            }
-
-            if (updateAvailable && serverVersionSupported) {
-                Scheduler.runTaskLater(() -> {
-                    sendUpdateNotification(player);
-                    notifiedPlayers.put(playerId, today);
-                }, 40L);
-            } else if (!serverVersionSupported) {
-                return;
-            } else {
-                checkForUpdates().thenAccept(hasUpdate -> {
-                    if (hasUpdate && serverVersionSupported) {
-                        Scheduler.runTask(() -> {
-                            sendUpdateNotification(player);
-                            notifiedPlayers.put(playerId, today);
-                        });
-                    }
-                });
-            }
+        if (!player.isOp()) {
+            return;
         }
+
+        UUID playerId = player.getUniqueId();
+        LocalDate today = LocalDate.now();
+
+        notifiedPlayers.entrySet().removeIf(entry -> entry.getValue().isBefore(today));
+
+        if (notifiedPlayers.containsKey(playerId)) {
+            return;
+        }
+
+        if (updateAvailable && serverVersionSupported) {
+            Scheduler.runTaskLater(() -> {
+                sendUpdateNotification(player);
+                notifiedPlayers.put(playerId, today);
+            }, 40L);
+        } else if (serverVersionSupported) {
+            checkForUpdates().thenAccept(hasUpdate -> {
+                if (hasUpdate && serverVersionSupported) {
+                    Scheduler.runTask(() -> {
+                        sendUpdateNotification(player);
+                        notifiedPlayers.put(playerId, today);
+                    });
+                }
+            });
+        }
+        // !serverVersionSupported: skip notifications entirely
     }
 }
